xidlc/tests/snapshots/codegen_snapshot__openapi__http_attribute.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_attribute.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/attribute/name": {
      "get": {
        "operationId": "HttpAttributeService.get_attribute_name",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpAttributeService"
        ]
      },
      "post": {
        "operationId": "HttpAttributeService.set_attribute_name",
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string"
              }
            }
          }
        },
        "responses": {
          "204": {
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpAttributeService"
        ]
      }
    },
    "/attribute/version": {
      "get": {
        "operationId": "HttpAttributeService.get_attribute_version",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpAttributeService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpAttributeService"
    }
  ]
}
