xidlc/tests/snapshots/codegen_snapshot__openapi__http_client_stream_ndjson.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_client_stream_ndjson.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "openapi": "3.2.0",
  "paths": {
    "/upload/chunks": {
      "post": {
        "operationId": "HttpClientStreamService.upload_chunk",
        "requestBody": {
          "content": {
            "application/x-ndjson": {
              "itemSchema": {
                "type": "string"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpClientStreamService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpClientStreamService"
    }
  ]
}
