xidlc/tests/snapshots/codegen_snapshot__openapi__http_client_stream_report.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_client_stream_report.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "UploadChunk": {
        "properties": {
          "bytes": {
            "items": {
              "format": "int32",
              "minimum": 0,
              "type": "integer"
            },
            "type": "array"
          },
          "part_id": {
            "type": "string"
          }
        },
        "required": [
          "part_id",
          "bytes"
        ],
        "type": "object"
      },
      "UploadSummary": {
        "properties": {
          "accepted": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "upload_id": {
            "type": "string"
          }
        },
        "required": [
          "upload_id",
          "accepted"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.2.0",
  "paths": {
    "/uploads/parts": {
      "post": {
        "operationId": "HttpClientStreamReportService.upload_parts",
        "requestBody": {
          "content": {
            "application/x-ndjson": {
              "itemSchema": {
                "$ref": "#/components/schemas/UploadChunk"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/UploadSummary"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpClientStreamReportService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpClientStreamReportService"
    }
  ]
}
